--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario email</title>
+  <link rel="stylesheet" href="styles.css/styles.css">
+  <link rel="shortcut icon" href="styles.css/favicon.png" type="image/x-icon">
+  <script src="js/index.js"></script>
+  <script src="js/validate.js"></script>
+
+  <title>Email</title>
 </head>
 
 <body>
+  <form>
+    <label for="sender">Remitente </label>
+    <input id="sender" type="email" value="poor-student@isdicoders.com" />
+    <label for="addressee">Destinatario </label>
+    <input id="addressee" type="test" />
+    <label for="affair">Asunto </label>
+    <input id="affair" type="text" />
+    <label for="email-body">Cuerpo</label>
+    <input id="email-body" type="textarea">
+    <label for="attach">Archivo adjunto</label>
+    <input id="attach" type="file">
+    <label for="program-send">Programar envio </label>
+    <input id="program-send" type="checkbox">
+    <button>Programar envio</button>
+
+
+
+  </form>
 
 </body>
 
