--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css/styles.css">
   <link rel="shortcut icon" href="styles.css/favicon.png" type="image/x-icon">
-  <script src="js/index.js"></script>
-  <script src="js/validate.js"></script>
+  <script src="js/index.js" defer></script>
+  <script src="js/validate.js" defer></script>
 
   <title>Email</title>
 </head>
 
 <body>
   <div class="main-container">
-    <form>
+    <form class="form">
       <div class="form-content">
         <label class="form-content" for="sender">Remitente </label>
         <input id="sender" type="email" value="poor-student@isdicoders.com" />
